Added user ID to groups